                   Changes to the Cyrus IMAP Server

Changes to the Cyrus IMAP Server since 2.0.12

      * refactored code so less duplication 
      * added alternate config file for partial virtual domain support 
      * pop3d can now disable USER/PASS commands. 
      * STARTTLS now accepts a SSLv23 hello but doesn't allow SSLv23 to be
        negotiated. 
      * imtest no longer buffers to aid use as an automated layer. 
      * master now supports maximum number of service processes via the
        "maxchild" modifier. 
      * fixed a bug in the Sieve string lexer. 
      * one imapd process can now service multiple clients in sequence,
        eliminating a large number of forks. 

Changes to the Cyrus IMAP Server since 2.0.11

      * portability fixes involving setrlimit() 
      * fixed compiler warnings 
      * the STARTTLS command will only accept TLSv1 now, not SSLv2/v3. The
        imaps port is unaffected by this change. 
      * timsieved no longer returns garbage strings. 

Changes to the Cyrus IMAP Server since 2.0.9

      * some small memory savings 
      * the "fud" daemon once again works correctly 
      * the IDLE extension now uses signals correctly 
      * problems with libwrap have been resolved 
      * imapd and pop3d now log connections protected via TLS. 
      * efficiency improvements when searching for a particular message-id 
      * fixed an envelope-parsing bug affecting SORT and THREAD 
      * made RENAME keep the same mailbox uniqueid, preserving seen state
        across renames 
      * STOREing flags to multiple messages in one command is now more
        efficient 
      * RENAME now preserves the ACL 
      * LIST is now as efficient as Cyrus v1.6, modulo Berkeley DB issues. 
      * Sieve zephyr notifications are now correct. 
      * crash in reconstruct now fixed. 
      * man pages added for cyrus.conf, master, lmtpd, idled, ctl_mboxlist,
        and ctl_deliver. 